# micrograd

./: .gitignore  README.md  pyproject.toml
src/micrograd/: value.py
src/micrograd/nn/: abstract_nn.py  layer.py  mlp.py  neuron.py
test/unit/: test_mlp.py  test_value.py
